Add underline back to total_passengers on driver manifest

--- a/app/views/reports/driver_manifest/_trip.html.haml
+++ b/app/views/reports/driver_manifest/_trip.html.haml
@@ -52,7 +52,7 @@
     %td
 
 %tr
-  %td= translate_helper("driver_manifest_total_passengers") 
+  %td{style: 'border-bottom: 1px solid black;'}= translate_helper("driver_manifest_total_passengers") 
   %td= trip.trip_size
   %td{style: 'text-align: right; padding-bottom: 0px; vertical-align: bottom !important;'}= translate_helper("driver_manifest_donation_$") 
   %td{style: 'border-bottom: 1px solid black;'} 
