Avoid adding blank page in priting driver manifest

--- a/app/views/reports/driver_manifest.html.haml
+++ b/app/views/reports/driver_manifest.html.haml
@@ -25,9 +25,9 @@
 
 - runs_by_driver = @runs.group_by(&:driver_name)
 - driver_names = runs_by_driver.keys.sort_by(&:to_s)
-- driver_names.each do |driver_name|
+- driver_names.each_with_index do |driver_name, index|
   - run_group =  runs_by_driver[driver_name]
-  .col-sm-12.col-md-10.col-md-offset-1.col-lg-8.col-lg-offset-2.page-break
+  .col-sm-12.col-md-10.col-md-offset-1.col-lg-8.col-lg-offset-2.page-break{style: (index == 0 ? "page-break-before: auto;" : "")}
     .row
       .col-xs-6{style: 'font-size: 18px; font-weight: bold; padding-left: 0px;'}
         .col-sm-12{style: 'padding-left: 0px;'}
