--- a/app/views/users/new_user.html.erb
+++ b/app/views/users/new_user.html.erb
@@ -1,93 +1,1 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("new_user_heading") %></h1>
-</div>
-
-<%= form_for @user, :url=>url_for(:action=>:create_user) do |f| %>
-  <% error_messages = @user.errors.any? ? @user.errors.full_messages : @errors %>
-  <% if error_messages.any? %>
-    <div id="error_explanation">
-      <h2><%= translate_helper("user_form_error_message", count: error_messages.count) %></h2>
-      <ul>
-      <% error_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <% if @is_user_deleted %>
-    <p><%= link_to translate_helper("restore_user_link_text"), restore_user_path(id: @user.try(:id)), :class=>'new-user action-bttn' %></p>
-  <% end %>
-
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <div class="panel panel-primary">
-        <div class="panel-heading"><%= translate_helper("user_details_heading") %></div>
-        <div class="panel-body form-horizontal">
-          <div class="form-group">
-            <%= f.label :first_name, translate_helper("first_name"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= f.text_field :first_name, class: "form-control" %>
-            </div>
-          </div>  
-          <div class="form-group">
-            <%= f.label :last_name, translate_helper("last_name"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= f.text_field :last_name, class: "form-control" %>
-            </div>
-          </div>  
-          <div class="form-group">
-            <%= f.label :username, translate_helper("username"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= f.text_field :username, class: "form-control" %>
-            </div>
-          </div>  
-          <div class="form-group">
-            <%= f.label :email, translate_helper("email"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= f.text_field :email, class: "form-control" %>
-            </div>
-          </div>  
-          <div class="form-group">
-            <%= f.label :permissions, translate_helper("permissions"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= select :role, :level, Role.editable_role_array_by_user(current_user), {}, { class: "form-control" } %>
-            </div>
-          </div> 
-          <div class="form-group">
-            <%= f.label :phone_number, translate_helper("phone_number"), class: "col-md-2 control-label" %>
-            <div class="col-md-10">
-              <%= f.text_field :phone_number, class: "form-control" %>
-            </div>
-          </div>   
-        </div>
-      </div>
-
-      <% prefix = "user_address_attributes" %>
-      <div class="panel panel-primary">
-        <div class="panel-heading"><%= translate_helper("user_address_heading") %></div>
-        <div class="panel-body form-horizontal">
-          <% @user.address ||= @user.build_address provider: @current_provider %>
-          <%= f.fields_for :address, @user.address do |address_form| %>
-            <%= render 'addresses/non_geocoding_form_fields', address_form: address_form, readonly: false%>
-          <% end %>
-        </div><!-- END .panel-body -->
-      </div><!-- END .panel -->
-
-      <%= render 'addresses/google_place_autocomplete_js'%>
-
-      <script type="text/javascript">
-        $(function() {
-          // Force uppercase text for OFT inputs
-          $('[data-convert="uppercase"]').keyup(function(evt) {
-            this.value = this.value.toUpperCase();
-          });
-        });
-      </script>
-    </div>
-  </div>
-
-  <div class="row col-sm-12 form-actions">
-    <%= f.submit translate_helper("new_user_submit"), class: "btn action-button" %>
-  </div>
-<% end %>
+<%= render 'form', edit_mode: :new %>
