--- a/app/views/trips_runs/_filters.html.haml
+++ b/app/views/trips_runs/_filters.html.haml
@@ -10,12 +10,9 @@
       .col-sm-12{style: 'padding: 5px;'}
         = f.label :run_trip_day, translate_helper("run_trip_day")
         = f.text_field :run_trip_day, :value => format_time_for_listing_day(@run_trip_day), class: 'date-picker form-control', readonly: true
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :vehicle_id, translate_helper(:vehicle)
-        = f.select :vehicle_id, options_from_collection_for_select( @vehicles, :id, :name, session[:vehicle_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :driver_id, translate_helper(:driver)
-        = f.select :driver_id, options_from_collection_for_select( @drivers, :id, :name, session[:driver_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+      .col-sm-12#run_filter{style: 'padding: 5px;'}
+        = f.label :run_id, translate_helper(:run)
+        = f.select :run_id, options_from_collection_for_select( Run.for_date(@run_trip_day), :id, :name, session[:run_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
       .col-sm-12{style: 'padding: 5px;'}
         = f.label :status_id, translate_helper(:status)
         = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
@@ -38,6 +35,11 @@
       $('#run_trip_filter_form select').submit();
     });
 
+    $('#run_trip_filters_run_trip_day').change(function() {
+      $.ajax({
+        url: "#{runs_by_date_trips_runs_path(format: :js)}?run_trip_day=" + $(this).val()
+      });
+    });
   });
       
     
