--- a/app/views/trips/_filters.html.haml
+++ b/app/views/trips/_filters.html.haml
@@ -17,17 +17,13 @@
       .col-sm-12{style: 'padding: 5px;'}
         = render partial: 'weekday_select'
       .col-sm-12{style: 'padding: 5px;'}
-        = f.label :vehicle_id, translate_helper(:vehicle)
-        = f.select :vehicle_id, options_from_collection_for_select( @vehicles, :id, :name, session[:vehicle_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
-      .col-sm-12{style: 'padding: 5px;'}
-        = f.label :driver_id, translate_helper(:driver)
-        = f.select :driver_id, options_from_collection_for_select( @drivers, :id, :name, session[:driver_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
-      .col-sm-12{style: 'padding: 5px;'}
         = f.label :status_id, translate_helper(:status)
         = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
       .col-sm-12{style: 'padding: 5px;'}
         = f.label :trip_result_id, translate_helper(:trip_result)
-        = f.select :trip_result_id, options_from_collection_for_select( TripResult.by_provider(current_provider), :id, :name, session[:trip_result_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        = f.collection_check_boxes :trip_result_id, [[-1, 'Select All']] + TripResult.by_provider(current_provider).order(:name).pluck(:id, :name), :first, :last, { checked: session[:trip_result_id] }, {class: 'trip-result-filter', style: 'vertical-align: initial;'} do |b|
+          .col-sm-12
+            = b.check_box + " " + b.text
 
 = render "shared/date_time_picker_javascript"
 :javascript
@@ -41,6 +37,9 @@
       $('#trip_filter_form select').submit();
     });
 
+    $('.trip-result-filter[value=-1]').change(function() {
+      $('.trip-result-filter[value!=-1]').prop('checked', $(this).is(':checked'));
+    });
   });
       
     
