--- a/app/views/trips/change_result.js.haml
+++ b/app/views/trips/change_result.js.haml
@@ -1,6 +1,6 @@
 - if !@message.blank?
   show_alert_dialog("#{@message}");
   $('#tripsTable tr[data-trip-id="#{@trip.id}"] .change-trip-result select').val(#{@prev_trip_result_id || false} || '');
-- elsif !@trip_result_filters.blank? && !@trip_result_filters.split(',').index("#{@trip.trip_result_id}")
+- elsif !@trip_result_filters.blank? && !@trip_result_filters.include?("#{@trip.trip_result_id || TripResult::UNSCHEDULED_ID}")
   $('#tripsTable tr[data-trip-id="#{@trip.id}"]').remove();
   $('#calendar').data('fullCalendar').removeEvents(#{@trip.id});
