Fix the issue with cursor automatically going to the end of input

--- a/app/views/addresses/_geocoding_or_not_form_fields.html.erb
+++ b/app/views/addresses/_geocoding_or_not_form_fields.html.erb
@@ -73,9 +73,9 @@
 
 <script type="text/javascript">
   $(function() {
-    // Force uppercase text for OFT inputs
+    // Force uppercase text
     $('[data-convert="uppercase"]').keyup(function(evt) {
-      this.value = this.value.toUpperCase();
+      convert_uppercase(this);
     });
     
     $('.address_non_street_mailing_address').change(function() {
