--- a/app/views/drivers/_address_panel.html.erb
+++ b/app/views/drivers/_address_panel.html.erb
@@ -12,9 +12,9 @@
 
 <script type="text/javascript">
   $(function() {
-    // Force uppercase text for OFT inputs
+    // Force uppercase text
     $('[data-convert="uppercase"]').keyup(function(evt) {
-      this.value = this.value.toUpperCase();
+      convert_uppercase(this);
     });
   });
 </script>
