--- a/app/views/drivers/_address_panel.html.erb
+++ b/app/views/drivers/_address_panel.html.erb
@@ -8,6 +8,17 @@
   </div><!-- END .panel-body -->
 </div><!-- END .panel -->
 
+
+<% prefix = "driver_alt_address_attributes" %>
+<div class="panel panel-primary">
+  <div class="panel-heading"><%= translate_helper("driver_alt_address_heading") %></div>
+  <div class="panel-body form-horizontal">
+    <%= f.fields_for :alt_address, @driver.alt_address do |address_form| %>
+      <%= render 'addresses/non_geocoding_form_fields', address_form: address_form, readonly: @readonly%>
+    <% end %>
+  </div><!-- END .panel-body -->
+</div><!-- END .panel -->
+
 <%= render 'addresses/google_place_autocomplete_js'%>
 
 <script type="text/javascript">
