Support photo in customer & driver profile (E.13, F.13)

--- a/app/views/customers/_details_panel.html.haml
+++ b/app/views/customers/_details_panel.html.haml
@@ -22,6 +22,15 @@
           = f.label :token, translate_helper(:customer_token_label) 
         .col-sm-9
           = @customer.token
+    .form-group.col-sm-12
+      .col-sm-3
+        = f.label :photo, translate_helper(:customer_form_photo) 
+      .col-sm-9
+        - if @customer.photo.present? && !@customer.photo.new_record?
+          = image_tag @customer.photo.image.url(:thumb)
+        - unless edit_mode == :show
+          = f.fields_for :photo do |image_upload| 
+            = image_upload.file_field :image, class: "form-control"  
     .form-group.col-sm-12.firstname
       .col-sm-3
         = f.label :first_name, translate_helper(:first_name) 
