--- a/app/views/addresses/_geocoding_or_not_form_fields.html.erb
+++ b/app/views/addresses/_geocoding_or_not_form_fields.html.erb
@@ -7,11 +7,12 @@
   <%= form.label :name, translate_helper("address_name") %>
   <%= form.text_field :name, maxlength: 30 %>
 </li>
-
-<li class="selfclear">
-  <%= form.label :building_name, translate_helper("building_name") %>
-  <%= form.text_field :building_name %>
-</li>
+<% unless prefix == 'customer' %>
+  <li class="selfclear">
+    <%= form.label :building_name, translate_helper("building_name") %>
+    <%= form.text_field :building_name %>
+  </li>
+<% end %>
 
 <li class="selfclear">
   <%= label_tag "#{prefix}_non_street_mailing_address", translate_helper("non_street_mailing_address") %>
