Add Late Cancel and Same Day Cancel as new trip results. Canceling a scheduled trip would taking the trip off the run or cab (C.6)

--- a/app/views/trips/_row.html.erb
+++ b/app/views/trips/_row.html.erb
@@ -49,9 +49,11 @@
       <%= format_time_for_listing trip.appointment_time %>
     <% end %>
   </td>
-  <td>
+  <td class="trip-status">
     <% if trip.run.present? %>
       <%= link_to trip.run_text, run_path(trip.run.id) %>
+    <% elsif trip.cab %>
+      <%= translate_helper("cab") %>
     <% end %>
   </td>
   <td>
