Display customer eligibilities in trip page (C.9)

--- a/app/views/customers/_new_address_js.html.erb
+++ b/app/views/customers/_new_address_js.html.erb
@@ -1,6 +1,9 @@
 <script type='text/javascript'>
 
   function populate_address_form(field, address) {
+    if(!address) {
+      return;
+    }
     form = $("#" + field + "-address-form");
     form.find('#address_id').val(address.id);
     form.find('#' + field + '_name').val(address.name);
