Replace trip address picker with merged results from Ridepilot saved places and google suggestions(C.18)

--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -123,3 +123,7 @@ table.dataTable tbody tr.selected {
 .address_search {
   width: 100%;
 }
+
+.place-picker-div .twitter-typeahead, .place-picker-div .tt-dropdown-menu {
+  width: 100% !important;
+}
